--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "test": "mocha",
     "build": "vite build",
+    "db_init": "node main/db_init.js",
     "dev_start": "NODE_ENV=development electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder --config.asar=false",
-    "cross_dist":"electron-builder -mwl"
+    "cross_dist": "electron-builder -mwl"
   },
   "keywords": [],
   "author": "Li Yafu",
@@ -18,37 +19,39 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "electron": "^24.2.0",
+    "electron-builder": "^23.6.0",
+    "electron-rebuild": "^3.2.9",
     "mocha": "^10.2.0",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.2",
-    "electron-builder": "^23.6.0",
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "better-sqlite3": "^8.3.0",
+    "better-sqlite3": "^8.4.0",
     "electron-context-menu": "^3.6.1",
     "electron-squirrel-startup": "^1.0.0",
     "marked": "^5.0.2"
   },
-  "build":{
+  "build": {
     "appId": "liyafu",
     "mac": {
       "category": "public.app-category.education",
       "target": "dmg"
     },
-    "linux":{
+    "linux": {
       "target": "AppImage"
     },
-    "win":{
+    "win": {
       "target": "nsis"
     },
-    "files":[
+    "files": [
       "libsimple/",
       "main",
       "renderer",
       "front_dist/*/**",
-      "front_dist/*"
+      "front_dist/*",
+      "slippod.db"
     ]
   }
 }
