--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ thumbs.db
 .eslintcache
 .browserslistrc
 .electron-vendors.cache.json
+slippod.config
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
