--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ thumbs.db
 .browserslistrc
 .electron-vendors.cache.json
 slippod.config
+front_dist
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
