--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-context-menu": "^3.6.1"
   },
   "dependencies": {
     "better-sqlite3": "^8.4.0",
-    "electron-context-menu": "^3.6.1",
-    "electron-squirrel-startup": "^1.0.0",
     "marked": "^5.0.2"
   },
   "build": {
