--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-slippod",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "I hate nodejs",
   "main": "main/main.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "dev_start": "NODE_ENV=development electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder --config.asar=false",
-    "cross_dist": "electron-builder -mwl"
+    "cross_dist": "electron-builder -mwl",
+    "local_release": "vite build && electron-builder --config.asar=false"
   },
   "keywords": [],
   "author": "Li Yafu",
@@ -48,11 +49,8 @@
     "files": [
       "libsimple/",
       "main",
-      "renderer",
-      "front_dist/*/**",
-      "front_dist/*",
-      "slippod.db",
-      "slippod.config"
+      "dist/assets",
+      "dist/resource"
     ]
   }
 }
