--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-
 name: Release
 on:
   workflow_call:
@@ -13,26 +12,30 @@ concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: true
 
+
 defaults:
   run:
     shell: 'bash'
 
+
 jobs:
   draft_release:
+
+    permissions:
+      contents: write # Allows this job to create releases
 
     strategy:
       fail-fast: true
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16 # Need for npm >=7.7
           cache: 'npm'
 
       - run: npm ci
@@ -50,7 +53,7 @@ jobs:
           retry_wait_seconds: 15
           retry_on: error
           shell: 'bash'
-          command: npx --no-install electron-builder --config.asar=false --publish ${{ inputs.dry-run && 'never' || 'always' }}
+          command: npx --no-install electron-builder --config .electron-builder.config.js --publish ${{ inputs.dry-run && 'never' || 'always' }}
         env:
           # Code Signing params
           # See https://www.electron.build/code-signing
