--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slippod",
   "description": "just for fun",
-  "version": "0.0.4",
+  "version": "beta-0.0.1",
   "private": true,
   "update_schema": "node tasks/update_schema.js",
   "author": {
