--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build:main": "cd ./packages/main && vite build",
     "build:preload": "cd ./packages/preload && vite build",
     "build:renderer": "vite build --config ./packages/renderer/vite.config.js",
-    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.js --dir --config.asar=false",
-    "pack":"DEBUG=electron-builder cross-env MODE=production electron-builder build --config .electron-builder.config.js --dir --config.asar=false",
+    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.js --dir",
     "watch": "node scripts/watch.mjs",
     "lint": "eslint . --ext js,mjs,cjs,vue",
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs",
