--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.8",
   "private": true,
   "author": {
-    "name": "Double L"
+    "name": "Anywhere Arc LTD"
   },
   "main": "src/main/main.js",
   "scripts": {
