--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,7 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
             apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+            command: 'whoami'
             preCommands: echo "*** pre command ***"
             postCommands: |
                 echo "*** post commands ***"
