--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "update_schema": "node tasks/update_schema.js"
   },
   "devDependencies": {
+    "@electron/notarize": "^2.2.0",
     "autoprefixer": "^10.4.16",
     "electron": "^24.2.0",
     "electron-builder": "23.6.0",
