--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@electron/notarize": "^2.2.0",
+    "autoprefixer": "^10.4.16",
     "electron": "^24.2.0",
     "electron-builder": "23.6.0",
     "electron-context-menu": "^3.6.1",
